--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>Calculator</title>
 </head>
 <body>
 <div class="container">
     <div class="display"></div>
     <div class="buttons">
-        <button class="btn-number" >1</button>
-        <button class="btn-number" >2</button>
-        <button class="btn-number">3</button>
-        <button class="btn-operator">+</button>
-        <button class="btn-number">4</button>
-        <button class="btn-number">5</button>
-        <button class="btn-number">6</button>
-        <button class="btn-operator">-</button>
-        <button class="btn-number">7</button>
-        <button class="btn-number">8</button>
-        <button class="btn-number">9</button>
-        <button class="btn-operator">X</button>
-        <button class="btn-clear">C</button>
-        <button class="btn-number">0</button>
-       <button class="btn-equals">=</button> 
-        <button class="btn-operator">/</button>
+        <button class="btn-number" data-num="1" >1</button>
+        <button class="btn-number" data-num="2">2</button>
+        <button class="btn-number"data-num="3">3</button>
+        <button class="btn-operator" data-num="+">+</button>
+        <button class="btn-number" data-num="4">4</button>
+        <button class="btn-number" data-num="5">5</button>
+        <button class="btn-number" data-num="6">6</button>
+        <button class="btn-operator" data-num="-">-</button>
+        <button class="btn-number" data-num="7">7</button>
+        <button class="btn-number" data-num="8">8</button>
+        <button class="btn-number" data-num="9">9</button>
+        <button class="btn-operator"data-num="*">X</button>
+        <button class="btn-clear" >C</button>
+        <button class="btn-number" data-num="0">0</button>
+       <button class="btn-equals" data-num="=">=</button> 
+        <button class="btn-operator" data-num="/">/</button>
 
     </div>
 </div>
